--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,18 @@
 {
   "Logging": {
+    "Debug": {
+      "LogLevel": {
+        "Default": "Debug"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Microsoft": "Warning",
+        "Default": "Information"
+      }
+    },
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug"
     }
   },
   "AllowedHosts": "*",
