--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,22 +1,14 @@
 {
-  "Logging": {
-    "Debug": {
-      "LogLevel": {
-        "Default": "Debug"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Microsoft": "Warning",
-        "Default": "Information"
-      }
-    },
-    "LogLevel": {
-      "Default": "Debug"
-    }
-  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLString": "Server=192.168.1.16; Database=Test; User Id=sa; Password=xmgy123; Pooling=True;Max Pool Size=32; Min Pool Size=1; Connection LifeTime=20; Trusted_Connection=False; MultipleActiveResultSets=True"
+    "MSSQLString": "Server=192.168.1.16; Database=Test; User Id=sa; Password=xmgy123; Pooling=True; Max Pool Size=32; Min Pool Size=1; Connection LifeTime=20; Trusted_Connection=False; MultipleActiveResultSets=True"
+  },
+  "WebAPISettings": {
+    "LogConfigPath": "config/log4net.config",
+    // 所有文件存储的路径
+    "FolderPath": "D:/C#/WebAPI/WebAPI/WebAPI/files",
+    // Folder\xxx
+    "ImagePath": "image",
+    "ReportTemplatePath": "template"
   }
 }
