--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -14,6 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="entity\view\**" />
+    <Content Remove="entity\view\**" />
+    <EmbeddedResource Remove="entity\view\**" />
+    <None Remove="entity\view\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
     <PackageReference Include="JWT" Version="8.6.0" />
@@ -32,7 +39,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="entity\view\" />
     <Folder Include="files\image\" />
     <Folder Include="files\template\" />
   </ItemGroup>
