--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,22 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      }
+    }
+  },
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "None"
+    }
+  },
   "AllowedHosts": "*",
   "WebAPISettings": {
+    "JWTSecret": "THE SECRET MUST BE 32 BYTES AT LEAST",
     "MSSQLString": "Server=192.168.1.16; Database=Test; User Id=sa; Password=xmgy123; Pooling=True; Max Pool Size=32; Min Pool Size=1; Connection LifeTime=20; Trusted_Connection=False; MultipleActiveResultSets=True",
     "LogConfigPath": "config/log4net.config",
     // 所有文件存储的路径
