--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -16,7 +16,7 @@
   },
   "AllowedHosts": "*",
   "WebAPISettings": {
-    "JWTSecret": "THE SECRET MUST BE 32 BYTES AT LEAST",
+    "JWTSecret": "THE SECRET MUST HAVE 32 BYTES AT LEAST",
     "MSSQLString": "Server=192.168.1.16; Database=Test; User Id=sa; Password=xmgy123; Pooling=True; Max Pool Size=32; Min Pool Size=1; Connection LifeTime=20; Trusted_Connection=False; MultipleActiveResultSets=True",
     "LogConfigPath": "config/log4net.config",
     // 所有文件存储的路径
